--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,66 @@
 name: Deploy Jekyll site to Pages
 
 on:
-    push:
-        branches: ["main"]
+  push:
+    branches: ["main"]
 
 concurrency:
-    group: "pages"
-    cancel-in-progress: false
+  group: "pages"
+  cancel-in-progress: false
 
 permissions:
-    contents: read
-    pages: write
-    id-token: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-    # Build job
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-            - name: Setup Ruby
-              uses: ruby/setup-ruby@v1
-              with:
-                  ruby-version: "3.1"
-                  bundler-cache: true
-                  cache-version: 0
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
 
-            - name: Install dependencies
-              run: bundle install
+      - name: Update Bundler
+        run: gem install bundler
 
-            - name: Setup Pages
-              id: pages
-              uses: actions/configure-pages@v3
+      - name: Install Dependencies
+        run: bundle install --jobs 4 --retry 3
 
-            - name: Build with Jekyll
-              run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-              env:
-                  JEKYLL_ENV: production
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
 
-            - name: Copy CNAME file
-              run: cp CNAME _site/
+      - name: Build with Jekyll
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
 
-            - name: Upload artifact
-              uses: actions/upload-artifact@v4
-              with:
-                name: github-pages
-                path: _site
-                retention-days: 1
+      - name: Copy CNAME File
+        if: hashFiles('CNAME') != ''
+        run: cp CNAME _site/
 
-    # Deployment job
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: build
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v2
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: _site
+          retention-days: 1
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
