--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Ruby
@@ -26,12 +26,16 @@ jobs:
         with:
           ruby-version: "3.1"
           bundler-cache: true
+          cache-version: 0
 
       - name: Update Bundler
         run: gem install bundler
 
-      - name: Install Dependencies
-        run: bundle install --jobs 4 --retry 3
+      - name: Clean Cache
+        run: rm -rf vendor/bundle || true
+
+      - name: Install dependencies
+        run: bundle install
 
       - name: Setup Pages
         id: pages
@@ -42,11 +46,10 @@ jobs:
         env:
           JEKYLL_ENV: production
 
-      - name: Copy CNAME File
-        if: hashFiles('CNAME') != ''
-        run: cp CNAME _site/
+      - name: Copy CNAME file
+        run: cp CNAME _site/ || echo "CNAME file not found, skipping"
 
-      - name: Upload Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
