--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: _site
+          path: |
+            _site/**
+            !_site/assets/js/bootstrap.min.js.map:Zone.Identifier
           retention-days: 1
+
 
   # Deployment job
   deploy:
