--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,68 +4,43 @@ on:
   push:
     branches: ["main"]
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Ruby
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.1"
+          ruby-version: '3.1'
           bundler-cache: true
-          cache-version: 0
-
-      - name: Update Bundler
-        run: gem install bundler
-
-      - name: Clean Cache
-        run: rm -rf vendor/bundle || true
 
       - name: Install dependencies
         run: bundle install
 
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
-
-      - name: Build with Jekyll
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+      - name: Build Jekyll site
+        run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
 
-      - name: Copy CNAME file
-        run: cp CNAME _site/ || echo "CNAME file not found, skipping"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages
-          path: |
-            _site/**
-            !_site/assets/js/bootstrap.min.js.map:Zone.Identifier
-          retention-days: 1
+          path: ./_site/
 
-
-  # Deployment job
   deploy:
+    runs-on: ubuntu-latest
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
